2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘statelist’ from global state of rlog(1).

	* rlog.c (struct criteria): Add member ‘states’.
	(statelist): Delete var.
	(extractdelta): Use ‘criteria->states’.
	(getstate): Take 2nd arg ‘criteria’; use ‘criteria->states’.
	(main): Update initialization form of auto var ‘criteria’;
	update call to ‘getstate’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘lockerlist’ from global state of rlog(1).

	* rlog.c (struct criteria): Add member ‘lockers’.
	(lockerlist): Delete var.
	(getlocker): Take 2nd arg ‘criteria’; use ‘criteria->lockers’.
	(trunclocks): Take arg ‘criteria’; use ‘criteria->lockers’.
	(main): Update initialization form of auto var ‘criteria’;
	update calls to ‘getlocker’, ‘trunclocks’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘authorlist’ from global state of rlog(1).

	* rlog.c (struct criteria): Add member ‘authors’.
	(extractdelta): Take 3rd arg ‘criteria’; use ‘criteria->authors’.
	(exttree): Take 3rd arg ‘criteria’; update call to ‘extractdelta’.
	(getauthor): Take 2nd arg ‘criteria’; use ‘criteria->authors’.
	(main): Update initialization form of auto var ‘criteria’;
	update calls to ‘getauthor’, ‘exttree’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘revlist’ from global state of rlog(1).

	* rlog.c (struct criteria): New.
	(revlist): Delete var.
	(getnumericrev): Take 2nd arg ‘criteria’; use ‘criteria->revs’.
	(putrevpairs): Unmark ‘data’ as ‘RCS_UNUSED’;
	interpret ‘data’ as ‘criteria’; use ‘criteria->revs’.
	(main): Add auto var ‘criteria’; update
	calls to ‘parse_revpairs’, ‘getnumericrev’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘parse_revpairs’ accept/pass-through opaque data.

	* rcsutil.c (parse_revpairs): Take arg ‘data’; call ‘put’ with it.
	* base.h (parse_revpairs): Update func decl.
	* rcs.c (putdelrev): Take 4th arg ‘data’; mark it ‘RCS_UNUSED’.
	(main): Update call to ‘parse_revpairs’.