@@ -1,5 +1,13 @@
 2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Remove ‘Revlst’ from global state of rlog(1).
+
+	* rlog.c (struct criteria): Add member ‘actual’.
+	(Revlst): Delete var.
+	(extractdelta, getnumericrev): Use ‘criteria->actual’.
+
+2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Remove ‘statelist’ from global state of rlog(1).
 
 	* rlog.c (struct criteria): Add member ‘states’.
